--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
 </head>
 <body>
     <h2>Portfolio</h2>
-    <a href="./bootstrap-landing-template">Bootstrap-landing-template</a>
-    <a href="./dashboard">Dashboard</a>
-    <a href="./resto-template">resto-template</a>
-    <a href="./tasksjs">TasksJS</a>
+    <a href="/Eesto-template">Resto-template</a><br>
+    <a href="/Bootstrap-landing-template">Bootstrap-landing-template</a><br>
+    <a href="/Dashboard">Dashboard</a><br>
+    <a href="/TasksJS">TasksJS</a>
 </body>
 </html>
