--- a/index.html
+++ b/index.html
@@ -20,5 +20,6 @@
     <a href="/Resto-template">Resto-template</a>
     <a href="/Bootstrap-landing-template">Bootstrap-landing-template</a>
     <a href="/Dashboard">Dashboard</a>
+    <a href="/Build-home">Build-home</a>
 </body>
 </html>
