--- a/index.html
+++ b/index.html
@@ -21,5 +21,6 @@
     <a href="/Bootstrap-landing-template">Bootstrap-landing-template</a>
     <a href="/Dashboard">Dashboard</a>
     <a href="/Build-home">Build-home</a>
+    <a href="/ualive">ualive</a>
 </body>
 </html>
