--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
 <body>
 
     <h2>Portfolio</h2>
-    <a href="/Resto-template">Resto-template</a>
-    <a href="/Bootstrap-landing-template">Bootstrap-landing-template</a>
-    <a href="/Dashboard">Dashboard</a>
-    <a href="/Build-home">Build-home</a>
-    <a href="/ualive">ualive</a>
+    <a href="./Resto-template">Resto-template</a>
+    <a href="./Bootstrap-landing-template">Bootstrap-landing-template</a>
+    <a href="./Dashboard">Dashboard</a>
+    <a href="./Build-home">Build-home</a>
+    <a href="./ualive">ualive</a>
 </body>
 </html>
