--- a/ualive/index.html
+++ b/ualive/index.html
@@ -118,7 +118,7 @@
           <div class="aside-left">
               <div class="container">
                   <div class="buttons mobile flex-container justify-sp-between">
-                      <button class="btn btn-default dark btn-media-aside">медиа галлерея</button>
+                      <button class="btn btn-default dark btn-media">медиа галлерея</button>
                       <a href="#"><img src="./img/left-arrow.png" alt="left-arrow"></a>
                   </div>
                   <div class="main-cabinet">
